--- a/css/index.css
+++ b/css/index.css
@@ -14,12 +14,15 @@ menu, nav, output, ruby, section, summary,
 time, mark, audio, video {  
 margin: 0;  
 padding: 0;  
-border: 0;  
+/* border: 0;   */
 font-size: 100%;  
 font: inherit;  
 vertical-align: baseline;  
 }
 /*GENERAL STYLES*/
+*{
+    border: 1px solid gray;
+}
 html{
     font-size:62.5%;
 }
@@ -133,4 +136,23 @@ button:hover{
 }
 .artist img{
     width:100%;
+}
+/* Media Queries */
+
+@media(max-width: 500px){
+    nav{
+        width: 60%;
+    }
+
+    .artists-container{
+        flex-flow: column wrap;
+        align-items: center;
+        align-content: space-around;
+    }
+
+    .bio{
+        width: 80%;
+    }
+
+
 }
