--- a/css/index.css
+++ b/css/index.css
@@ -20,9 +20,7 @@ font: inherit;
 vertical-align: baseline;  
 }
 /*GENERAL STYLES*/
-*{
-    border: 1px solid gray;
-}
+
 html{
     font-size:62.5%;
 }
@@ -144,15 +142,34 @@ button:hover{
         width: 60%;
     }
 
+    nav span{
+        height: 90%;
+    }
+
+    .title-container div{
+        width: 100%;
+    }
+
+    .title-container hr{
+        width:100%;
+    }
+
     .artists-container{
         flex-flow: column wrap;
         align-items: center;
-        align-content: space-around;
+        width: 100%;
+    }
+        
+    img{
+        height: 60vh;
     }
 
-    .bio{
+    .artist{
         width: 80%;
+        text-align: center;
     }
+
+    
 
 
 }
